Wed Jan  7 13:00:24 1998  Mario Weilguni  <mario@loki.valhalla.at>

	* edit.cpp: improved the IP and Gateway widgets

	* various improvements for the geometry managements

Tue Jan  6 12:56:14 1998  Mario Weilguni  <mario@loki.valhalla.at>

	* main.cpp: the main kppp window has now layout control

	* connect.cpp: layouted the connection window.

	* modeminfo.cpp (ModemInfo): layoutet the modeminfo dialog
	  and layouted the ModemTransfer dialog (ATI query)

Mon Jan  5 20:59:00 1998  Harri Porten  <porten@tu-harburg.de>

	* accounting.cpp: telephone costs are stored in kppprc now.
	  ~/.kde/share/apps/kppp/Costs is obsolete.
	* pppdata.cpp: added totalCosts() and setTotalCosts().
	  Several small cosmetic changes.  
	
Mon Jan  5 14:25:37 1998  Mario Weilguni  <mario@loki.valhalla.at>

	* docs/kppp.sgml: updated the docs for the new KDE file system
	  standard. Ispell'ed the docu.

	* main.cpp: added the "-q" command line switch. This is very
	  usefull in combination with "-c". Instead of returning to
	  the kppp main window kppp will exit after disconnecting.

	* Makefile.in: removed the external moc_*.cpp files and
	  included them directly with "#include". This saves 
	  approx. 30 KB in the binary and greatly speeds up 
	  compilation

Mon Jan  5 13:59:20 1998  Mario Weilguni  <mweilguni@sime.com>

	* Rules/TEMPLATE: fixed a typo: the extension of ruleset
	  files is ".rst", not ".rts"

Mon Jan  5 13:42:28 1998  Mario Weilguni  <mweilguni@sime.com>

	* general.cpp: replaced the KIntLineEdit class with the
	  class KIntegerLine from libkdeui. Replaced the progress
	  widget with that from libkdeui.

Mon Jan  5 12:51:43 1998  Mario Weilguni  <mweilguni@sime.com>

	* edit.cpp: now all major dialogs use Qt layout

Mon Jan  5 04:55:58 1998  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* fixed the while(*it) problem in pppdata.cpp it should be
	  while(it->current()).

Sun Jan  4 13:54:12 1998  Mario Weilguni <mweilguni@sime.com>