@@ -1,3 +1,8 @@
+Sat Jan 10 21:23:10 1998  Mario Weilguni  <mario@loki.valhalla.at>
+
+	* main.cpp: fixed a bug that cause kppp to go wild and display
+	hundreds of windows when it cannot load a ruleset file
+
 Wed Jan  7 13:00:24 1998  Mario Weilguni  <mario@loki.valhalla.at>
 
 	* edit.cpp: improved the IP and Gateway widgets
